name:                gc-hask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/group#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Pony
                     , PonyTypes
                     , Idable
                     , Draw
  build-depends:       base >= 4.7 && < 5
                     , graphviz >= 2999.19.0.0
                     , fgl >= 5.5.3.1
                     , transformers >= 0.5.5.0
                     , process >= 1.6.1.0
                     , text >= 1.2.2.0
  default-language:    Haskell2010

executable gc-hask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gc-hask
  default-language:    Haskell2010

test-suite gc-hask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gc-hask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gc-hask
